crates/codemark-cli/tests/snapshots/query_snapshots__declaration_enum_property_query.snap
---
source: crates/codemark-cli/tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  name: (type_identifier) @name0 @sticky.class
  (#eq? @name0 "NetworkError")
  (enum_class_body
    (property_declaration
      name: (pattern) @fn_name
      (#eq? @fn_name "isRetryable")) @target))
