crates/codemark-cli/tests/snapshots/query_snapshots__declaration_from_inner_point_query.snap
---
source: crates/codemark-cli/tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  (class_body
    (function_declaration
      name: (simple_identifier) @name0 @sticky.function
      (#eq? @name0 "update")
      (function_body
        (statements
          (call_expression
            (call_suffix
              (lambda_literal
                (statements
                  (property_declaration
                    (value_binding_pattern) @target))))))))))
