crates/codemark-cli/tests/snapshots/query_snapshots__fine_grained_extension_local_query.snap
---
source: crates/codemark-cli/tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  (class_body
    (function_declaration
      name: (simple_identifier) @name0 @sticky.function
      (#eq? @name0 "specializedAction")
      (function_body
        (statements
          (property_declaration
            name: (pattern) @fn_name
            (#eq? @fn_name "message")) @target)))))
