crates/codemark-cli/tests/snapshots/query_snapshots__fine_grained_interpolation_meta.snap
---
source: tests/query_snapshots.rs
expression: snapshot
---
name: fine_grained_interpolation
fixture: complex_scenarios.swift
strategy: Unified
range: "31"
node_type: statements
query: "[query stored in separate _query.snap file]"
