crates/codemark-cli/tests/snapshots/query_snapshots__fine_grained_interpolation_query.snap
---
source: tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  (class_body
    (function_declaration
      name: (simple_identifier) @name0
      (#eq? @name0 "update")
      (function_body
        (statements
          (call_expression
            (call_suffix
              (lambda_literal
                (statements) @target))))))))
