crates/codemark-cli/tests/snapshots/query_snapshots__fine_grained_point_call_meta.snap
---
source: tests/query_snapshots.rs
expression: snapshot
---
name: fine_grained_point_call
fixture: complex_scenarios.swift
strategy: Unified
range: "28:10"
node_type: simple_identifier
query: "[query stored in separate _query.snap file]"
